--- a/frontend/src/stylesheets/Question.css
+++ b/frontend/src/stylesheets/Question.css
@@ -1,75 +1,95 @@
 .question-view {
-  display: flex;
-  flex-direction: row;
+    display: flex;
+    flex-direction: row;
 }
 
 .categories-list {
-  flex-basis: 25%;
-  flex-shrink: 2;
+    flex-basis: 25%;
+    flex-shrink: 2;
 }
 
 .categories-list > form {
-  width: 60%;
+    width: 60%;
 }
 
 .questions-list {
-  flex-basis: 75%;
-  text-align: center;
+    flex-basis: 75%;
+    text-align: center;
 }
 
 .Question-holder {
-  padding: 10px 20px;
-  border: 2px black solid;
-  text-align: left;
-  margin: 7px;
+    padding: 0 20px;
+    border: 2px black solid;
+    text-align: left;
+    margin: 7px;
 }
 
 .Question-status {
-  display: flex;
-  flex-direction: row;
-  height: 30px;
-  width: 200px;
-  align-items: center;
-  justify-content: space-between;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    height: 30px;
+    width: 50%;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .Question {
-  font-size: 21px;
-  width: 100%;
+    margin-top: 20px;
+    font-size: 21px;
+    width: 100%;
 }
 
 .answer-holder {
-  font-size: 25px;
-  height: 25px;
-  margin: 5px 0px;
+
+    font-size: 25px;
+    height: 25px;
+    margin: 20px 0 ;
 }
 
 .show-answer {
-  width: 100px;
-  margin-top: 5px;
-  background-color: dodgerblue;
-  color: white;
-  padding: 3px 5px;
-  margin-left: 0px !important;
+    width: 100px;
+    margin-top: 5px;
+    background-color: dodgerblue;
+    color: white;
+    padding: 3px 5px;
+    margin-left: 0 !important;
 }
 
 span.page-num {
-  margin: 5px;
-  padding-bottom: 50px;
-  /* color: blue; */
-  font-weight: bolder;
-  text-decoration: underline;
-  font-size: 16px;
+    margin: 5px;
+    padding-bottom: 50px;
+    /* color: blue; */
+    font-weight: bolder;
+    text-decoration: underline;
+    font-size: 16px;
 }
 
 span.page-num.active {
-  color: blue;
+    color: blue;
 }
 
 img.category {
-  width: 30px;
+    width: 30px;
 }
 
 img.delete {
-  width: 20px;
+    width: 20px;
+}
+/* add star style for rating*/
+div.star {
+    width: 20px;
+    height: 20px;
+    margin: 2px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url('../star-black.png');
+}
+
+div.star.active {
+    background-image: url('../star.png')
+}
+
+.rating {
+    display: flex;
 }
