--- a/frontend/src/stylesheets/QuizView.css
+++ b/frontend/src/stylesheets/QuizView.css
@@ -21,11 +21,12 @@
 
 .button {
     width: 100px;
-    margin-top: 5px;
+    margin-top: 10px;
     background-color: dodgerblue;
     color: white;
     padding: 3px 5px;
     align-self: center;
+    cursor: pointer;
 }
 
 div.button {
